--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,12 @@ textarea {
   box-shadow: none;
 }
 
+.about-section {
+  background-image: url('../img/carousel-2.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
