--- a/css/main.css
+++ b/css/main.css
@@ -87,13 +87,44 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-.font-oswald {
-  font-family: 'Oswald', sans-serif !important;
+/* Fonts */
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/robotocondensed-light.woff2') format('woff2'),
+    url('../fonts/robotocondensed-light.woff') format('woff'),
+    url('../fonts/robotocondensed-light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/robotocondensed-regular.woff2') format('woff2'),
+    url('../fonts/robotocondensed-regular.woff') format('woff'),
+    url('../fonts/robotocondensed-regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/robotocondensed-bold.woff2') format('woff2'),
+    url('../fonts/robotocondensed-bold.woff') format('woff'),
+    url('../fonts/robotocondensed-bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+/* Style begin */
+
+.font-roboto {
+  font-family: 'Roboto', sans-serif !important;
 }
 
 .font-cabin {
   font-family: 'Cabin', sans-serif !important;
 }
+
 .header-logo {
   width: 80px;
   height: auto;
@@ -113,7 +144,9 @@ textarea {
   margin: 0px;
 }
 
-.paperback:hover, .hardcover:hover, .e-book:hover {
+.paperback:hover,
+.hardcover:hover,
+.e-book:hover {
   background-color: rgb(240, 240, 240);
 }
 
@@ -231,9 +264,9 @@ textarea {
 }
 
 @media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */
 }
 
@@ -244,6 +277,7 @@ textarea {
    ========================================================================== */
 
 @media print {
+
   *,
   *::before,
   *::after {
@@ -311,4 +345,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
